--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,10 +43,11 @@ h1 {
 .createBtn {
   display: flex;
   justify-content: center;
-  margin: 2rem auto;
+  margin: 1rem auto;
 }
 
 .table {
+  margin-top: 3rem;
   width: 100%;
 }
 
