--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,18 +43,25 @@ h1 {
 .createBtn {
   display: flex;
   justify-content: center;
-  margin: 1rem auto;
+  margin: 2rem auto;
   font-weight: 700;
 }
 
 .table {
-  margin-top: 3rem;
+  margin-top: 2rem;
   width: 100%;
+}
+
+span {
+  margin: 1rem;
 }
 
 /*BIG SCREENS*/
 @media (min-width: 60rem) { 
   body {
-    padding:0 20rem;
+    padding:0 15rem;
+  }
+  span {
+    margin: 3rem;
   }
 }
