--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,7 +53,8 @@ h1 {
 }
 
 span {
-  margin: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 /*BIG SCREENS*/
@@ -61,7 +62,12 @@ span {
   body {
     padding:0 15rem;
   }
-  span {
+ 
+  span:nth-child(1) {
+    margin: 1rem;
+  }
+
+  span:nth-child(2) {
     margin: 3rem;
   }
 }
